# open-telemetry

./: .djlintrc  .env.example  .gitignore  .pylintrc  app.py  config.py  docker-compose.yml  docker.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
core/: assessment_status.py  base.py  base_test.py  constants.py  custom_tags.py  db.py  teams_logger.py  template_utils.py  utils.py
docker/app/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  entrypoint.sh  http_webserver.conf  https_webserver.conf  nginx.conf  webserver.conf
hubble/: admin.py  apps.py  auth_helper.py  graph_helper.py  subdomainclassifier.py  teams.py  urls.py  views.py
hubble/middlewares/: subdomain_classifier.py  verify_users.py
hubble/migrations/: 0001_initial.py  0002_alter_assessment_user.py  0002_alter_timelinetask_days.py  0002_holiday_subbatch_subbatchtasktimeline_interndetail.py  0002_holiday_subbatch_subbatchtasktimeline_interndetail_and_more.py  0003_alter_subbatch_timeline.py  0003_batch_start_date.py  0003_extension_assessment.py  0003_extension_name.py  0003_subbatch_secondary_mentors.py  0003_timeline_created_by_alter_timeline_is_active.py  0004_alter_interndetail_sub_batch_and_more.py  0004_remove_subbatch_secondary_mentor_and_more.py  0004_traineeholiday.py  0005_alter_interndetail_user.py  0005_alter_subbatch_secondary_mentors_and_more.py  0006_alter_subbatchtasktimeline_end_date_and_more.py  0006_assessment_is_retry_needed_assessment_present_status_and_more.py  0006_batch_start_date.py  0007_alter_assessment_comment_alter_assessment_score.py  0007_traineeholiday.py  0009_merge_20231024_1649.py  (+1 more)
hubble_report/: asgi.py  custom_middleware.py  settings.py  urls.py  wsgi.py
hubble_reports/: hubble_reports.py  utils.py
reports/: apps.py  converters.py  urls.py  views.py
training/: apps.py  forms.py  urls.py  view.py  views.py
(+204 files in other folders)
