[tool.poetry]
name = "hubble-reports"
version = "0.1.0"
description = "Report module for hubble laravel app"
authors = ["Poovarasu <poovarasu@mallow-tech.com>"]
readme = "README.md"
packages = [{include = "hubble_reports"}]

[tool.poetry.dependencies]
python = "3.10.8"
Flask = "2.2.2"
python-dotenv = "^0.21.0"
flask-sqlalchemy = "^3.0.2"
psycopg2-binary = "^2.9.5"
msal = "^1.20.0"
flask-session = "^0.4.0"
flask-login = "^0.6.2"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
