[tool.poetry]
name = "hubble-report"
version = "0.1.0"
description = ""
authors = ["sudhakar_s8 <sudhakar@mallow-tech.com>"]
readme = "README.md"
packages = [{include = "hubble_report"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-ajax-datatable = "^4.4.5"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
msal = "^1.21.0"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
model-bakery = "^1.12.0"
faker = "^18.10.1"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
django-silk = "^5.0.3"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["core", "training"]
omit = ["teams_logger.py"]